# Performance-Enhancer

./: .gitignore  Readme.md  package.json  pnpm-workspace.yaml
.github/workflows/: ci.yml
extension/: .eslintrc.json  package.json  tsconfig.json
extension/src/: extension.ts
extension/src/__mocks__/: vscode.ts
extension/src/config/: projectConfig.ts  schema.ts
extension/src/diagnostics/: bundle.test.ts  bundle.ts  findingsProvider.ts  hover.ts  provider.test.ts  provider.ts  vecWidthProvider.ts
extension/src/fixProvider/: codeActionProvider.ts  patchTemplates.test.ts  patchTemplates.ts  verifier.ts
extension/src/llm/: cache.test.ts  cache.ts  executor.test.ts  executor.ts  manager.ts  promptLibrary.ts  router.test.ts  router.ts  taskDefinitions.ts  types.ts
extension/src/llm/providers/: anthropic.ts  mock.ts  ollama.ts  openaiCompat.ts
extension/src/panels/: asmDiffPanel.ts  cacheLinePanel.ts  compileTracePanel.ts  explanationPanel.ts  flameGraphPanel.ts  loopAnalyserPanel.ts  profileComparePanel.ts  profilePanel.ts  recordProfilePanel.ts  remarksPanel.ts
extension/src/profile/: hotnessProvider.ts  profileManager.test.ts  profileManager.ts
extension/src/sarif/: exporter.test.ts  exporter.ts
extension/src/sidecar/: client.test.ts  client.ts  lifecycle.ts  protocol.ts
extension/src/ui/: commands.ts  statusBar.ts
extension/src/util/: logger.ts  telemetry.test.ts  telemetry.ts
profile-tools/: Cargo.toml
profile-tools/perf-importer/: Cargo.toml
profile-tools/perf-importer/src/: main.rs
profile-tools/pprof-importer/: Cargo.toml  build.rs
profile-tools/pprof-importer/proto/: profile.proto
profile-tools/pprof-importer/src/: main.rs
progress/: 2026-05-16-phase1-foundation.md  2026-05-16-phase2-compiler-remarks.md  2026-05-16-phase3-static-analysis.md  2026-05-16-phase4-llm-layer.md  2026-05-16-phase5-visualisations-fixes.md  2026-05-16-phase6-slices1-6.md  2026-05-16-phase6-slices7-10.md  2026-05-17-feature-implementation.md
rules/data/: remark-classification.yaml
scripts/: toolchain-versions.env
shared-protocol/: sidecar-rpc.json
sidecar/: CMakeLists.txt
sidecar/src/: main.cpp  shadow_compile.cpp  shadow_compile.hpp
sidecar/src/ast/: project.cpp  project.hpp  translation_unit.cpp  translation_unit.hpp
sidecar/src/godbolt/: asm_parser.cpp  asm_parser.hpp  compile_cache.cpp  compile_cache.hpp  compiler.cpp  compiler.hpp  diff_engine.cpp  diff_engine.hpp
sidecar/src/profile/: model.hpp  perf_script_parser.cpp  perf_script_parser.hpp  store.cpp  store.hpp
sidecar/src/remarks/: classifier.cpp  classifier.hpp  gcc_parser.cpp  gcc_parser.hpp  model.hpp  parser.cpp  parser.hpp  source_hash.hpp  store.cpp  store.hpp
sidecar/src/rpc/: server.cpp  server.hpp
sidecar/src/rules/: engine.cpp  engine.hpp  finding.cpp  finding.hpp  rule_base.hpp  store.cpp  store.hpp
sidecar/src/rules/packs/concurrency/: mutex_where_atomic.cpp  mutex_where_atomic.hpp
sidecar/src/rules/packs/constexpr/: promotion_function.cpp  promotion_function.hpp  promotion_variable.cpp  promotion_variable.hpp
sidecar/src/rules/packs/function_attributes/: noexcept_move_ops.cpp  noexcept_move_ops.hpp
sidecar/src/rules/packs/hotpath/: allocation_in_loop.cpp  allocation_in_loop.hpp  map_in_loop.cpp  map_in_loop.hpp  shared_ptr_in_loop.cpp  shared_ptr_in_loop.hpp  std_function.cpp  std_function.hpp  unordered_map_no_reserve.cpp  unordered_map_no_reserve.hpp  vector_no_reserve.cpp  vector_no_reserve.hpp  virtual_dispatch.cpp  virtual_dispatch.hpp
sidecar/src/rules/packs/memory_layout/: aos_to_soa.cpp  aos_to_soa.hpp  cache_line_straddle.cpp  cache_line_straddle.hpp  padding_detected.cpp  padding_detected.hpp
sidecar/src/rules/packs/profile_driven/: profile_rules.cpp  profile_rules.hpp
sidecar/src/rules/packs/stl_hygiene/: container_copy.cpp  container_copy.hpp  endl_flush.cpp  endl_flush.hpp  nodiscard_return.cpp  nodiscard_return.hpp  range_for_copy.cpp  range_for_copy.hpp  string_view_param.cpp  string_view_param.hpp
sidecar/src/rules/packs/ub/: signed_loop_bound.cpp  signed_loop_bound.hpp
sidecar/src/rules/packs/vec/: aliasing.cpp  aliasing.hpp  complex_cf.cpp  complex_cf.hpp  reduction_fp.cpp  reduction_fp.hpp
sidecar/src/util/: logger.cpp  logger.hpp
sidecar/tests/: CMakeLists.txt  godbolt_test.cpp  ping_test.cpp  profile_rules_test.cpp  profile_store_test.cpp  remarks_parser_test.cpp  rules_test.cpp
sidecar/tests/fixtures/: inline_missed.opt.yaml  vec_missed.opt.yaml
sidecar/tests/fixtures/rules/: noexcept_negative.cpp  noexcept_positive.cpp  padding_negative.cpp  padding_positive.cpp  range_for_copy_negative.cpp  range_for_copy_positive.cpp  vector_no_reserve_negative.cpp  vector_no_reserve_positive.cpp
tests/integration/: hello.test.ts  package.json  tsconfig.json
