[package]
name = "pprof-importer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pprof-importer"
path = "src/main.rs"

[dependencies]
serde       = { version = "1",  features = ["derive"] }
serde_json  = "1"
flate2      = "1"      # gzip decompression for .pb.gz files
prost       = "0.12"   # protobuf decoding

[build-dependencies]
prost-build = "0.12"

[profile.release]
strip    = true
lto      = true
opt-level = 3
